# vic_pinky

./: README.md
doc/: 99-vic-pinky.rules
vicpinky_bringup/: package.xml  setup.py
vicpinky_bringup/config/: laser_filter.yaml
vicpinky_bringup/launch/: bringup.launch.xml  gazebo_multi_spwan.launch.xml
vicpinky_bringup/vicpinky_bringup/: bringup.py
vicpinky_controller/: CMakeLists.txt  package.xml
vicpinky_controller/config/: vicpinky_controllers.yaml
vicpinky_controller/include/vicpinky_controller/: zlac8015d.h  zlac_hardware_interface.hpp
vicpinky_controller/launch/: zlac_control.launch.py
vicpinky_controller/resource/: zlac_hardware_interface.xml
vicpinky_controller/src/: zlac8015d.cpp  zlac_hardware_interface.cpp
vicpinky_description/launch/: display.launch.xml  upload.launch.xml
vicpinky_description/meshes/visual/: caster.stl  wheel.stl
vicpinky_description/urdf/: gazebo_control.xacro  lidar.xacro  robot_core.xacro  robot_gazebo.xacro
vicpinky_gazebo/launch/: launch_sim.launch.xml
vicpinky_gazebo/worlds/: factory_L1.world  hotel.world
vicpinky_navigation/: CMakeLists.txt  package.xml
vicpinky_navigation/launch/: map_building.launch.xml
vicpinky_navigation/params/: nav2_params.yaml
vicpinky_navigation/rviz/: nav2_view.rviz
